# mimsy

./: CMakeLists.txt  README.md  setup.ld
include/: efi.hpp  efi_common.hpp  efi_types.hpp  efi_wrapper.hpp
scripts/: create_disk.sh  run.sh
source/boot/: efi_native.h  header.S  stub.S
source/mimsy/: main.cpp
